@@ -1,15 +1,12 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.0.4.ebuild,v 1.12 2011/12/02 23:43:54 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.0.4.ebuild,v 1.13 2011/12/03 02:36:35 vapier Exp $
 
 PATCH_VER="1.1"
 UCLIBC_VER="1.0"
 PIE_VER="8.7.8"
 PP_VER=""
 HTB_VER=""
-
-# bug #126609
-GENTOO_PATCH_EXCLUDE="33_all_gcc4-pr16104.patch"
 
 inherit toolchain
 
