@@ -1,8 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.3.3-r2.ebuild,v 1.14 2011/12/02 23:43:54 vapier Exp $
-
-GENTOO_PATCH_EXCLUDE="69_all_gcc43-pr39013.patch" #262567
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.3.3-r2.ebuild,v 1.15 2011/12/03 02:36:35 vapier Exp $
 
 PATCH_VER="1.2"
 UCLIBC_VER="1.1"
