@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.834 2011/12/02 23:43:54 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.835 2011/12/03 02:36:35 vapier Exp $
+
+  03 Dec 2011; Mike Frysinger <vapier@gentoo.org> gcc-4.0.4.ebuild,
+  gcc-4.3.3-r2.ebuild, gcc-4.3.4.ebuild:
+  Drop obsolete GENTOO_PATCH_EXCLUDE lines.
 
   02 Dec 2011; Mike Frysinger <vapier@gentoo.org> gcc-2.95.3-r10.ebuild,
   gcc-3.2.2.ebuild, gcc-3.3.6-r1.ebuild, gcc-3.4.6-r2.ebuild, gcc-4.0.4.ebuild,
